# uav-ugv

./: README.md
collab_core/: CMakeLists.txt  package.xml
collab_core/config/: navigation_params.yaml
collab_core/launch/: navigation_controller.launch.py
collab_core/src/: coordination_node.cpp  navi_ctrller_changed1.cpp  navi_ctrller_changed2.cpp  navi_ctrller_prev.cpp  navigation_controller.cpp  navigation_cube_goal.cpp  navigation_follow_goal copy.cpp  navigation_follow_goal.cpp  navigation_follow_goal_send_action.cpp  navigation_target_goal copy 2.cpp  navigation_target_goal copy.cpp  navigation_target_goal.cpp  navigation_to_red_cube.cpp  yahboomcar_coordination_node.cpp
drone_control/: CMakeLists.txt  package.xml
drone_control/src/: circle_node.cpp  circle_node_rmf.cpp  drone_goal_publisher.cpp  forward_flight_node.cpp  hoven_test_node.cpp  lower_circle_node.cpp  sweep_flight_node.cpp  takeoff_node.cpp  waypoint_node_rmf copy.cpp  waypoint_node_rmf.cpp  zigzag_rmf_flight.cpp
image_processing/: CMakeLists copy.txt  CMakeLists.txt  package.xml
image_processing/image_save/: detection_result_100_170_13_0.txt  detection_result_102_70_14_0.txt  detection_result_105_870_15_0.txt  detection_result_108_871_16_0.txt  detection_result_36_148_0_0.txt  detection_result_38_548_1_0.txt  detection_result_41_48_2_0.txt  detection_result_41_48_2_1.txt  detection_result_43_349_3_0.txt  detection_result_43_349_3_1.txt  detection_result_45_348_4_0.txt  detection_result_45_348_4_1.txt  detection_result_47_549_5_0.txt  detection_result_47_549_5_1.txt  detection_result_49_948_6_0.txt  detection_result_49_948_6_1.txt  detection_result_52_148_7_0.txt  detection_result_54_648_8_0.txt  detection_result_57_148_9_0.txt  detection_result_57_148_9_1.txt  detection_result_59_549_10_0.txt  detection_result_59_549_10_1.txt  detection_result_62_548_11_0.txt  detection_result_64_570_0_0.txt  detection_result_64_570_0_1.txt  detection_result_65_549_12_0.txt  detection_result_66_470_1_0.txt  detection_result_66_470_1_1.txt  detection_result_67_148_13_0.txt  detection_result_67_148_13_1.txt  detection_result_68_770_2_0.txt  detection_result_71_870_3_0.txt  detection_result_72_248_14_0.txt  detection_result_73_449_15_0.txt  detection_result_74_471_4_0.txt  detection_result_75_849_16_0.txt  detection_result_76_870_5_0.txt  detection_result_76_870_5_1.txt  detection_result_78_349_17_0.txt  detection_result_79_570_6_0.txt  (+129 more)
image_processing/image_save1.20/: detection_result_101_691_27_0.txt  detection_result_103_791_28_0.txt  detection_result_106_291_29_0.txt  detection_result_108_90_30_0.txt  detection_result_109_990_31_0.txt  detection_result_109_990_31_1.txt  detection_result_112_491_32_0.txt  detection_result_114_490_33_0.txt  detection_result_116_790_34_0.txt  detection_result_118_890_35_0.txt  detection_result_120_890_36_0.txt  detection_result_122_790_37_0.txt  detection_result_124_991_38_0.txt  detection_result_126_990_39_0.txt  detection_result_129_90_40_0.txt  detection_result_131_90_41_0.txt  detection_result_133_91_42_0.txt  detection_result_134_890_43_0.txt  detection_result_136_991_44_0.txt  detection_result_138_990_45_0.txt  detection_result_140_990_46_0.txt  detection_result_143_91_47_0.txt  detection_result_145_790_48_0.txt  detection_result_149_991_49_0.txt  detection_result_151_790_50_0.txt  detection_result_154_90_51_0.txt  detection_result_156_291_52_0.txt  detection_result_158_391_53_0.txt  detection_result_160_291_54_0.txt  detection_result_162_491_55_0.txt  detection_result_164_690_56_0.txt  detection_result_166_690_57_0.txt  detection_result_169_90_58_0.txt  detection_result_171_90_59_0.txt  detection_result_172_991_60_0.txt  detection_result_175_691_61_0.txt  detection_result_177_891_62_0.txt  detection_result_180_90_63_0.txt  detection_result_182_190_64_0.txt  detection_result_186_990_65_0.txt  (+157 more)
image_processing/image_save1.201/: detection_result_101_635_14_0.txt  detection_result_104_636_15_0.txt  detection_result_107_435_16_0.txt  detection_result_109_736_17_0.txt  detection_result_112_635_18_0.txt  detection_result_115_536_19_0.txt  detection_result_119_136_20_0.txt  detection_result_123_236_21_0.txt  detection_result_126_836_22_0.txt  detection_result_130_35_23_0.txt  detection_result_133_135_24_0.txt  detection_result_135_736_25_0.txt  detection_result_142_135_26_0.txt  detection_result_144_136_27_0.txt  detection_result_146_135_28_0.txt  detection_result_148_436_29_0.txt  detection_result_150_436_30_0.txt  detection_result_152_235_31_0.txt  detection_result_154_135_32_0.txt  detection_result_156_136_33_0.txt  detection_result_158_135_34_0.txt  detection_result_160_135_35_0.txt  detection_result_162_36_36_0.txt  detection_result_163_835_37_0.txt  detection_result_165_936_38_0.txt  detection_result_167_935_39_0.txt  detection_result_169_835_40_0.txt  detection_result_171_737_41_0.txt  detection_result_173_735_42_0.txt  detection_result_175_535_43_0.txt  detection_result_180_35_44_0.txt  detection_result_182_36_45_0.txt  detection_result_183_937_46_0.txt  detection_result_186_436_47_0.txt  detection_result_188_436_48_0.txt  detection_result_190_336_49_0.txt  detection_result_192_236_50_0.txt  detection_result_194_135_51_0.txt  detection_result_196_235_52_0.txt  detection_result_198_536_53_0.txt  (+160 more)
image_processing/image_save1.210/: detection_result_36_148_0_0.txt  detection_result_38_548_1_0.txt  detection_result_41_48_2_0.txt  detection_result_41_48_2_1.txt  detection_result_43_349_3_0.txt  detection_result_43_349_3_1.txt  detection_result_45_348_4_0.txt  detection_result_45_348_4_1.txt  detection_result_47_549_5_0.txt  detection_result_47_549_5_1.txt  detection_result_49_948_6_0.txt  detection_result_49_948_6_1.txt  detection_result_52_148_7_0.txt  detection_result_54_648_8_0.txt  (+22 more)
rl_dispatcher/: package.xml  setup.cfg  setup.py
rmf_coverage_planner/: CMakeLists.txt  package.xml
rmf_custom_tasks/: CMakeLists.txt  package.xml
rmf_custom_tasks_self/: CMakeLists.txt  package.xml
robot_dispose_adapter/: CMakeLists.txt  package.xml
simulation/: CMakeLists.txt  package.xml
(+846 files in other folders)
