<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_processing</name>
  <version>0.0.0</version>
  <description>Trigger-based image capture with YOLOv11 (red cube detection)</description>
  <maintainer email="suda@todo.todo">suda</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>ament_index_cpp</depend>
  <depend>px4_msgs</depend>
  <depend>rmf_custom_tasks</depend>
  <!-- TF2 相关 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 可视化 -->
  <depend>visualization_msgs</depend>

  <!-- 自定义消息 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 其他运行时依赖 -->
  <depend>image_transport</depend>

  <!-- 系统级库依赖（使用ROS 2格式版本3支持的方式） -->
  <depend>curl</depend>
  <depend>libtiff-dev</depend>
  <depend>libonnxruntime-dev</depend>  <!-- 必须添加：ONNX Runtime 无间接依赖 -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
    