<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_dispatcher</name>
  <version>0.0.0</version>
  <description>Reinforcement Learning dispatcher node for RMF (Robot Motion Framework), used to dispatch delivery robots by bypassing RMF's native bidding mechanism.</description>
  <maintainer email="2327406014@stu.suda.edu.cn">suda</maintainer>
  <license>Apache-2.0</license>

  <!-- 核心ROS2依赖（必须完整） -->
  <depend>rclpy</depend>                    <!-- Python版ROS2核心（必加） -->
  <depend>rmf_fleet_msgs</depend>           <!-- 订阅无人车状态 -->
  <depend>std_msgs</depend>                 <!-- 字符串消息 -->
  <depend>geometry_msgs</depend>            <!-- Point坐标消息 -->
  <depend>rmf_task_msgs</depend>            <!-- RMF任务请求消息 -->
  <depend>rmf_custom_tasks_self</depend>    <!-- 新增：依赖你的自定义任务服务包 -->

  <!-- 构建工具依赖（Python包必须加ament_cmake_python） -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- 运行依赖（补充Python库的系统依赖） -->
  <exec_depend>python3-numpy</exec_depend>  <!-- 系统级numpy依赖 -->
  <exec_depend>python3-pip</exec_depend>    <!-- 用于安装pip包 -->

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 声明Python构建类型（必须） -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
