<?xml version="1.0"?>
<package format="3">
  <name>rmf_custom_tasks</name>
  <version>0.0.0</version>
  <description>RMF自定义单点导航任务接口（仅含全局队列核心）</description>
  <maintainer email="your_email@xxx.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmf_task_msgs</build_depend>
  <build_depend>nlohmann_json</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rmf_fleet_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- 运行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmf_task_msgs</exec_depend>
  <exec_depend>nlohmann_json</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
